--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+2
+  sqflite: 1.1.5
+  toast: ^0.1.5
+  http: 0.12.1
+  connectivity: 0.4.5+3
+  intl: 0.16.1
 
 dev_dependencies:
   flutter_test:
