--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   http: 0.12.1
   connectivity: 0.4.5+3
   intl: 0.16.1
+  camera: ^0.5.7+4
+  path_provider: ^0.5.0+1
+  csv: ^4.0.3
+  permission_handler: '^4.2.0+hotfix.3'
 
 dev_dependencies:
   flutter_test:
